Style fix for Dashboard Nav link menu placement (#2678)
* added custom style in custom.scss to adjust the placement of the nav link menu in the dashboard

* added bootstrap class to position the dropdown menu-list in the dashboard

* removed unwanted spaces in custom.scss and empty css class in theme.scss file

--- a/frontend/src/_styles/theme.scss
+++ b/frontend/src/_styles/theme.scss
@@ -230,9 +230,7 @@ button {
       margin-top: 25px;
     }
 
-    .advanced-options-container {
-      // margin-top: 42px !important;
-    }
+    
 
     .query-name-field input {
       max-width: 180px;
